Fix Spring Boot runner for latest Java